--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
 <link rel="stylesheet" href="banner.css">
 <link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="reset.css">
 <title>Apex トップページ</title>
 </head>
 <body>
     <div class=index_title>ゲームチャンネル</div>
-    <div class="content">
+    <div class=content>
         <div class=banner>
             <div class=banner_h1>
-                リンク
+                カテゴリ別動画
             </div>
+            武器の使い方
+            <div class=banner_h1>
+                掲示板
+            </div>
+            武器
+            キャラ
         </div>
-        <div class=index_h1>ゲームチャンネル Apexへようこそ！</div>
+        <div class=index>
+            <div class=index_h1>ゲームチャンネル Apexへようこそ！</div>
+        </div>
     </div>
 </body>
 </html>
